test/conformance/kuttl/_aaa_template_resources/03-delete.yaml
# Specifying the kind as `TestStep` performs certain behaviors like this delete operation.
apiVersion: kuttl.dev/v1beta1
kind: TestStep
delete:
- apiVersion: v1
  kind: Secret
  name: regcred
  namespace: bar
